Change cover page

--- a/thesis.tex
+++ b/thesis.tex
@@ -219,10 +219,10 @@
 %	OUTPUT TITLE PAGE AND PREVIOUS
 %----------------------------------------------------------------------------------------
 
-% \input{chapters/cover_information.tex}
-\input{chapters/cover_information_alternative_spanish.tex}
-\blankPage
-\input{chapters/cover_information_alternative.tex}
+\input{chapters/cover_information.tex}
+% \input{chapters/cover_information_alternative_spanish.tex}
+% \blankPage
+% \input{chapters/cover_information_alternative.tex}
 
 %----------------------------------------------------------------------------------------
 %	STARTING PHRASE AND COPYRIGHT
