Updates from Overleaf

--- a/glossary.tex
+++ b/glossary.tex
@@ -15,7 +15,7 @@
 \newacronym[longplural={Bidirectional Scatter Distribution Function}]{bsdf}{BSDF}{Bidirectional Scatter Distribution Function}
 \newacronym[longplural={Bidirectional Scattering Surface Distribution Function}]{bssdf}{BSSDF}{Bidirectional Scattering Surface Distribution Function}
 \newacronym[longplural={Backpack-mounted Mobile LiDAR Scanning}]{bmmls}{BMMLS}{Backpack-mounted Mobile LiDAR Scanning}
-\newacronym[longplural={Boundary Volume Hierarchy}]{bvh}{BVH}{BBoundary Volume Hierarchy}
+\newacronym[longplural={Boundary Volume Hierarchy}]{bvh}{BVH}{Boundary Volume Hierarchy}
 \newacronym[longplural={Building Information Modelling}]{bim}{BIM}{Building Information Modelling}
 \newacronym[longplural={Bundle Adjustment}]{ba}{BA}{Bundle Adjustment}
 \newacronym[longplural={Central Processing Unit}]{cpu}{CPU}{Central Processing Unit}
