--- a/thesis.tex
+++ b/thesis.tex
@@ -336,8 +336,8 @@
 \partIntro{I}{Introduction and overview}{This section introduces a shallow background of Remote Sensing as well as the aim and objectives of this doctoral dissertation. Then, the state-of-the-art on the fusion and simulation of Remote Sensing data is presented.}
 
 \input{chapters/introduction.tex}
-% \input{chapters/fundamentals.tex}
-% \input{chapters/context.tex}
+\input{chapters/fundamentals.tex}
+\input{chapters/context.tex}
 
 %----------------------------------------------------------------------------------------
 %	PART II
@@ -349,8 +349,8 @@
 \oddChapter
 \partIntro{II}{Materials and image fusion}{The first part of this chapter introduces the materials utilized in this research work. Specifications and shortcomings of each device are here illustrated and solved for the sake of clarity and to avoid its repeatability through this dissertation. Then, images are processed and matched to compose a multi-layer system that will help to construct enriched 3D models in later chapters. }
 
-% \input{chapters/technology.tex}
-% \input{chapters/image_fusion.tex}
+\input{chapters/technology.tex}
+\input{chapters/image_fusion.tex}
 
 %----------------------------------------------------------------------------------------
 %	PART III
@@ -363,9 +363,9 @@
 \oddChapter
 \partIntro{III}{Point cloud enrichment}{This chapter comprises the generation of thermal and multispectral point clouds. Remotely sensed data is projected over large \acrshort{rgb} point clouds to obtain denser point clouds from low-resolution imagery. The evolution of this approach is shown throughout this chapter; the first proposal is solved in a sequential manner, whereas the methodology of the last work was completely implemented in the \acrshort{gpu}. }
 
-% \input{chapters/thermal_point_cloud.tex}
-% \input{chapters/multi_thermal_point_cloud}
-% \input{chapters/hyper_point_cloud}
+\input{chapters/thermal_point_cloud.tex}
+\input{chapters/multi_thermal_point_cloud}
+\input{chapters/hyper_point_cloud}
 
 %----------------------------------------------------------------------------------------
 %	PART IV
@@ -379,8 +379,8 @@
 % Finally, the emulated sensor is applied to the optimization of \acrshort{lidar} scans within 3D buildings. 
 }
 
-% \input{chapters/lidar_remote_sensing.tex}
-% \input{chapters/lidar_intensity.tex}
+\input{chapters/lidar_remote_sensing.tex}
+\input{chapters/lidar_intensity.tex}
 
 %----------------------------------------------------------------------------------------
 %	PART V
@@ -392,9 +392,9 @@
 \oddChapter
 \partIntro{V}{Applications of \\remotely sensed data}{This chapter comprises several case studies where previously processed and generated data are applied to the planning of acquisition processes as well as to the detection and classification of features. First, the synthetic \acrshort{lidar} data will be used for the planning of scans, in order to optimize and minimize the locations required to monitor buildings. Then, thermographic point clouds are applied to the detection of landscape features that could be related to buried remains of an archaeological site. Finally, the hyperspectral data of a vineyard plot is corrected to help in the classification of different grapevine varieties using Deep Learning.  }
 
-% \input{chapters/lidar_optimization}
-% \input{chapters/castle_puerta_arenas}
-% \input{chapters/vineyard_classification}
+\input{chapters/lidar_optimization}
+\input{chapters/castle_puerta_arenas}
+\input{chapters/vineyard_classification}
 
 %----------------------------------------------------------------------------------------
 %	PART VI
